build_logs_utf8.txt
node : C:\Users\siddh\D
ownloads\Earthana\Earth
ana\node_modules\.bin\n
ext:2
At line:1 char:1
+ node 
node_modules/.bin/next 
build > build_logs.txt 
2>&1; cat build_lo ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\sidd   
 h\...les\.bin\next    
:2:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
basedir=$(dirname 
"$(echo "$0" | sed -e 
's,\\,/,g')")
          ^^^^^^^

SyntaxError: missing ) 
after argument list
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1512:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1534:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1699:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1313:32)
    at Function._load (
node:internal/modules/c
js/loader:1123:12)
    at TracingChannel.t
raceSync (node:diagnost
ics_channel:322:14)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:217:24)
    at Function.execute
UserEntryPoint [as 
runMain] (node:internal
/modules/run_main:170:5
)
    at node:internal/ma
in/run_main_module:36:4
9

Node.js v22.13.1
